Update readme with raw IG entries and add sublime files for ignoring

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 Data/ # Ignore cache of data
 .Rproj.user
+*.html # Preview of readme.md
+
+# Ignore Sublime files
+.sublime-workspace
+.sublime-project
